--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "test": "npm run test:e2e",
+    "serve": "http-server . -p 4173 -c-1",
+    "pretest:e2e": "npm run serve & npx wait-on http://localhost:4173",
     "test:e2e": "playwright test",
     "test:e2e:headed": "playwright test --headed",
     "test:e2e:ui": "playwright test --ui"
@@ -12,6 +14,8 @@
   "author": "Generador Express Team",
   "license": "MIT",
   "devDependencies": {
-    "@playwright/test": "^1.43.1"
+    "@playwright/test": "^1.43.1",
+    "http-server": "^14.1.1",
+    "wait-on": "^7.0.1"
   }
 }
